[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/placeholder.svg" type="Texture" id=1]
[ext_resource path="res://Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 2 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 25.0
margin_right = -50.0
margin_bottom = -25.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 924.0
margin_bottom = 553.0

[node name="Title" type="Label" parent="HBoxContainer"]
margin_right = 924.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 1 )
text = "Portal2D"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_top = 155.0
margin_right = 924.0
margin_bottom = 553.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 924.0
margin_bottom = 398.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 224.0
margin_bottom = 398.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 696.0
margin_bottom = 398.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
margin_left = 94.0
margin_top = 17.0
margin_right = 373.0
margin_bottom = 381.0

[node name="PLAY" type="Button" parent="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 279.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"
flat = true

[node name="Controls" type="Button" parent="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 279.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 5 )
text = "Controls"
flat = true

[node name="Clear Save" type="Button" parent="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 279.0
margin_bottom = 235.0
custom_fonts/font = ExtResource( 5 )
text = "Clear Save"
flat = true

[node name="reserved2" type="Button" parent="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 239.0
margin_right = 279.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 5 )
disabled = true
text = "- reserved -"
flat = true

[node name="Leave" type="Button" parent="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 279.0
margin_bottom = 341.0
custom_fonts/font = ExtResource( 5 )
text = "Leave :("
flat = true

[node name="Version" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 345.0
margin_right = 279.0
margin_bottom = 364.0
custom_fonts/font = SubResource( 3 )
text = "Portal2D v0.5"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 700.0
margin_right = 924.0
margin_bottom = 398.0
texture = ExtResource( 1 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 304.0
margin_top = 241.0
margin_right = 619.0
margin_bottom = 311.0
size_flags_horizontal = 4
size_flags_vertical = 4
dialog_text = "Are you sure you want to delete your save file?"
[connection signal="pressed" from="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/PLAY" to="." method="_on_PLAY_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/Clear Save" to="." method="_on_Clear_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/HBoxContainer/CenterContainer/VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
